syntax = "proto3";

package films;

service FilmsService {
  rpc FindAll (FilmListingQuery) returns (Films) {}
}

message Empty {}

message Pagination {
  int32 page = 1;
  int32 size = 2;
}

message PaginationMetadata {
  int32 page = 1;
  int32 size = 2;
  int32 totalRecords = 3;
  int32 totalPages = 4;
}

message Films {
  repeated Film items = 1;
}

message FilmListingQuery {
  Pagination pagination = 1;
  string search = 2;
}

message Film {
  int32 id = 1;
  string title = 2;
  string content = 3;
}